<resources>
    <string name="app_name">CharlApp</string>
    <string name="default_web_client_id" translatable="false">585930442273-3c8rv6fukqrk2ij2hnfnutq6t1e5e8v5.apps.googleusercontent.com</string>
    <string name="welcome_msg">¡Bienvenido a CharlApp!</string>

    <string name="nombre_desarrollador" translatable="false">Nicolás Cano de Celis</string>
    <string name="Btn_ir_logeo">Iniciar sesión email</string>
    <string name="Btn_login_google">Iniciar sesión Google</string>

    <string name="R_Et_nombre_usuario">Nombre de Usuario</string>
    <string name="R_Et_email">Correo Electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repita su contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="menu_perfil">Perfil de usuario</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_salir">Cerrar sesión</string>

    <string name="menu_visitar">Visitar perfil</string>

    <string name="L_Et_email">Correo electrónico</string>
    <string name="L_Et_password">Contraseña</string>
    <string name="Btn_Login">Ingresar</string>
    <string name="TXT_no_cuenta">¿No tienes cuenta?</string>
    <string name="TXT_ir_registro">Registrarme</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="Nombre_usuario">Nombre de usuario</string>

    <string name="Item_nombre_usuario">Nombre de usuario</string>
    <string name="Item_email_usuario">Email de usuario</string>

    <string name="Et_buscar_usuario">Buscar usuario...</string>

    <!--Perfil de usuario-->

    <string name="P_n_usuario">Nombre de usuario</string>
    <string name="P_proveedor_txt">Proveedor: </string>
    <string name="P_proveedor" translatable="false"> -- </string>
    <string name="P_email">Correo electrónico</string>
    <string name="P_nombres">Nombres</string>
    <string name="P_apellidos">Apellidos</string>
    <string name="P_profesion">Profesion</string>
    <string name="P_domicilio">Domicilio</string>
    <string name="P_edad">Edad</string>
    <string name="P_telefono">Telefono</string>
    <string name="Btn_Guardar">Guardar</string>
    <string name="Btn_verificar">No verificado</string>

    <!--Cd - Establecer teléfono-->

    <string name="Establecer_telefono">Escribe tu número</string>
    <string name="Btn_aceptar_Telefono">Aceptar</string>

    <!--Cd - Cuenta verificada-->
    <string name="CuentaVerificadaTXT">Cuenta verificada</string>
    <string name="BtnEntendidoVerificado">Entendido</string>

    <!--Editar imagen perfil-->

    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--Cuadro de diálogo || seleccionar imagen de-->

    <string name="Txt_seleccionar_imagen">Seleccionar imagen de: </string>
    <string name="Btn_abrir_galeria">Galería</string>
    <string name="Btn_abrir_camara">Cámara</string>

    <!--Chat-->

    <string name="N_usuario_chat">Nombre de usuario</string>
    <string name="Et_mensaje">Escriba un mensaje</string>

    <string name="PV_Perfil_TXT">Perfil de usuario</string>
    <string name="PV_NombreU">Nombre de usuario</string>
    <string name="PV_EmailU">Email de usuario</string>
    <string name="PV_Uid_TXT">Identificador: </string>
    <string name="PV_Uid" translatable="false">Uid</string>




    <!--Item chat-->

    <string name="TXT_ver_mensaje">¡Hola!, ¿Cómo estás?</string>

    <!--Términos y condiciones-->

    <string name="Terminos_y_condiciones">Acepto los términos y condiciones para el uso personal de la presente aplicación</string>
    <string name="Btn_ir_registro">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="title_activity_perfil_visitado">PerfilVisitado</string>

</resources>