<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <EditText
            android:id="@+id/R_Et_nombre_usuario"
            android:hint="@string/R_Et_nombre_usuario"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:id="@+id/R_Et_email"
            android:hint="@string/R_Et_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:id="@+id/R_Et_password"
            android:hint="@string/R_Et_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:id="@+id/R_Et_r_password"
            android:hint="@string/R_Et_r_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <Button
            android:id="@+id/Btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Btn_registrar">

        </Button>

    </LinearLayout>

</RelativeLayout>