<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="110dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_charlapp_background">

        </ImageView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">


        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/L_Et_email"
                android:hint="@string/L_Et_email"
                android:drawableStart="@drawable/ic_email"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/L_Et_password"
                android:hint="@string/L_Et_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Login"
            android:text="@string/Btn_Login"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/registrarse"
            android:textStyle="bold">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:text="@string/TXT_no_cuenta"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/TXT_ir_registro"
            android:text="@string/TXT_ir_registro"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</RelativeLayout>