<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!--Portada-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen_portada">

            </ImageView>

            <!--Imagen de perfil-->
            <ImageView
                android:id="@+id/P_imagen"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="130dp"
                android:background="#354f60"
                android:scaleType="centerCrop">

            </ImageView>

            <!--Editar Imagen de perfil-->
            <ImageView
                android:id="@+id/Editar_imagen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="230dp"
                android:src="@drawable/editar_imagen_perfil">

            </ImageView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--Nombre de usuario-->
            <TextView
                android:id="@+id/P_n_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/P_n_usuario"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

            <!--Email-->
            <TextView
                android:id="@+id/P_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/P_email"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/P_proveedor_txt"
                    android:textSize="17sp"
                    android:textStyle="bold">

                </TextView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="#48C9B0"
                    android:padding="0.5dp"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/P_proveedor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/P_proveedor"
                        android:textSize="17sp"
                        android:textStyle="bold">

                    </TextView>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Nombres-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/P_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/P_nombres"
                    android:inputType="textPersonName|textCapWords">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Apellidos-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/P_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/P_apellidos"
                    android:inputType="textPersonName|textCapWords">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Profesion-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/P_profesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/P_profesion"
                    android:inputType="textCapWords">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Domicilio-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/P_domicilio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/P_domicilio"
                    android:inputType="textCapWords">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Edad-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/P_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/P_edad"
                    android:inputType="number">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Telefono-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/P_telefono"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/P_telefono"
                    android:textSize="18sp">

                </TextView>
                
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Editar_Telefono"
                    android:src="@drawable/telefono"
                    android:layout_marginStart="15dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp">

                </androidx.appcompat.widget.AppCompatImageView>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <!--Guardar | Actualizar datos de usuario-->
            <Button
                android:id="@+id/Btn_Guardar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Btn_Guardar"
                app:icon="@drawable/ic_guardar_informacion">

            </Button>


        </LinearLayout>

    </LinearLayout>

</ScrollView>