<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    
    <TextView
        android:text="@string/Txt_seleccionar_imagen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    
    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="20sp"
        android:weightSum="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Galería-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            
            <ImageView
                android:src="@drawable/galeria"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

            </ImageView>

            <Button
                android:id="@+id/Btn_abrir_galeria"
                android:text="@string/Btn_abrir_galeria"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>

        <!--Cámara-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:src="@drawable/camara"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

            </ImageView>

            <Button
                android:id="@+id/Btn_abrir_camara"
                android:text="@string/Btn_abrir_camara"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>